Fix - Z-index

--- a/src/frontend/components/CreatePost/CreatePost.css
+++ b/src/frontend/components/CreatePost/CreatePost.css
@@ -6,6 +6,7 @@ input[type="file"] {
   bottom: 10%;
   right: 10%;
   cursor: pointer;
+  z-index: 100;
 }
 
 .create-modal {
